--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -32,3 +32,7 @@
     background-color: #ffffff;
     border-radius: 12px;
 }
+.resume{
+    background-color: var(--tg-theme-bg-color);
+    color: var(--tg-theme-text-color);
+}
