--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,7 @@
   box-sizing: border-box;
 }
 body{
-  font-family: "Inter", sans-serif;}
+  font-family: "Inter", sans-serif;
+  background-color: var(--tg-theme-bg-color);
+  color: var(--tg-theme-text-color);
+}
