--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -29,7 +29,8 @@
     justify-content: center;
     align-items: center;
     gap: 6px;
-    background-color: #ffffff;
+    background-color: var(--tg-theme-bg-color);
+    color: var(--tg-theme-text-color);
     border-radius: 12px;
 }
 .resume{
