--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,25 +1,27 @@
 .navbar {
     background: url("https://s3-alpha-sig.figma.com/img/fa04/38bd/f50e2eb86f3e0228eba420533dd775a2?Expires=1705881600&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=e3DvMpB8ktLCEmIhvhJuRbHHZncc9NvMcsWr6HOgXPQz-VyhsHj9GKtTZ4G7jLF9NGGlDG8T9GOVGdOa960RR~Rzm7Y1WtnFBL7RoZeuuVrw-LwJw~csokuKbOz74d0fKigOnDzEssDArWpewvVV6WezBSVHoVOoSZ0Q00bWM8HD4Z~aZXTPblOieb7rBiHSh~SlO3juVuNvlhdbyez0NWngHmlL0YcIWBVoOIAkTpoaiYZow451HvWcafaWZj3szvO9EVBGgssLrOw6inbK0FP1jfk-qAslAr~39l9yb~d3RfYSFI9IKET4VELPX7IwAfyNPhHTKoN1je~ZK2tr1g__") lightgray 50% / cover no-repeat;
-    backdrop-filter: blur(1px) ;
+    backdrop-filter: blur(1px);
     height: 300px;
     position: relative;
 }
 
 .navbar::before {
-    content: ''; 
-    position: absolute; 
+    content: '';
+    position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    backdrop-filter: blur(1px) ;
+    backdrop-filter: blur(1px);
 }
 
 .logoImg {
     width: 96px;
     height: 96px;
-    border-radius: 50%; /* Use 50% for a perfect circle */
-    object-fit: cover; /* Ensure the image covers the entire container without distortion */
+    border-radius: 50%;
+    /* Use 50% for a perfect circle */
+    object-fit: cover;
+    /* Ensure the image covers the entire container without distortion */
 }
 
 .btn {
@@ -29,11 +31,11 @@
     justify-content: center;
     align-items: center;
     gap: 6px;
-    background-color: var(--tg-theme-bg-color);
-    color: var(--tg-theme-text-color);
+    background-color: var(--tg-theme-bg-color, #ffffff);
     border-radius: 12px;
 }
-.resume{
-    background-color: var(--tg-theme-bg-color);
+
+.resume {
+    background-color: var(--tg-theme-bg-color, #ffffff);
     color: var(--tg-theme-text-color);
 }
