--- a/src/components/comments/comments.css
+++ b/src/components/comments/comments.css
@@ -1,18 +1,20 @@
-.client{
+.client {
     border-radius: 12px;
-border: 1px solid rgba(0, 8, 20, 0.20);
-
-background: var(--White, #FFF);
+    border: 1px solid rgba(0, 8, 20, 0.20);
+    color: var(--tg-theme-text-color);
+    background-color: var(--tg-theme-bg-color);
 }
-.comment-text{
+
+.comment-text {
     color: var(--Black, #000814);
-font-feature-settings: 'case' on;
-/* Body/Regular */
-font-family: Inter;
-font-size: 17px;
-font-style: normal;
-font-weight: 400;
-line-height: 22px; /* 129.412% */
-letter-spacing: -0.408px;
-padding: 20px;
+    font-feature-settings: 'case' on;
+    /* Body/Regular */
+    font-family: Inter;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    /* 129.412% */
+    letter-spacing: -0.408px;
+    padding: 20px;
 }
